--- a/styles/main.css
+++ b/styles/main.css
@@ -63,3 +63,13 @@
         h2{
           color: #FDC800;
         }
+        #intro{
+            background-image: url(../Assets/boxstrips.svg);
+            background-repeat:no-repeat;
+            background-size: contain;
+        }
+        @media (max-width:700px) {
+            #intro{
+                background-image: none;
+            }
+        }
